# genomic-fm-noncoding-benchmark

./: .coveragerc  .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  environment.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
configs/: datasets.yaml  models.yaml
data/scripts/: 01_download_clinvar.sh  02_filter_noncoding.py  03_build_negative_sets.py  04_annotate_regions.py  05_extract_sequences.py  __init__.py
docs/: CONTRIBUTING.md  DEVICE_COMPATIBILITY.md  ENHANCEMENTS.md  MODELS.md  USAGE.md
notebooks/: 01_data_exploration.ipynb  02_results_analysis.ipynb
scripts/: create_test_data.py  mock_triton.py  run_all.sh  run_experiment.py  run_experiment_m4pro.py  run_finetune.sh  run_zero_shot.sh  test_simple.py
src/baselines/: __init__.py  base.py  conservation_scores.py
src/evaluation/: __init__.py  linear_probe.py  lora_finetune.py  metrics.py  zero_shot.py
src/models/: __init__.py  base.py  caduceus.py  dnabert2.py  evo.py  hyenadna.py  nucleotide_transformer.py  registry.py
src/utils/: __init__.py  caching.py  logging_config.py  progress.py  statistical_analysis.py  validation.py
src/visualization/: __init__.py  plots.py
tests/: __init__.py  conftest.py
tests/integration/: test_data_pipeline.py  test_evaluation_pipeline.py  test_model_loading.py
tests/unit/: test_base_model.py  test_data_processing.py  test_metrics.py  test_zero_shot.py
